--- a/menu.css
+++ b/menu.css
@@ -2,7 +2,7 @@ body {
     font-family: "Roboto Mono", monospace;
     text-align: center;
     background-image: url("");
-    background-color: #d2691e;
+    background-color: #e9880abb;
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
